--- a/static/index.html
+++ b/static/index.html
@@ -65,27 +65,24 @@
 
         .hero {
             position: relative;
+            margin: 0;
             padding: 8rem 0;
-            background: var(--gradient-dark);
             color: white;
             overflow: hidden;
+            --x: calc(var(--posX, 0) * 1px);
+            --y: calc(var(--posY, 0) * 1px);
+            background-image: 
+                linear-gradient(115deg, rgb(33, 150, 243), rgb(25, 25, 25)), 
+                radial-gradient(90% 100% at calc(50% + var(--x)) calc(0% + var(--y)), rgb(100, 181, 246), rgb(13, 71, 161)), 
+                radial-gradient(100% 100% at calc(80% - var(--x)) calc(0% - var(--y)), rgb(25, 118, 210), rgb(10, 10, 10)), 
+                radial-gradient(150% 210% at calc(100% + var(--x)) calc(0% + var(--y)), rgb(21, 101, 192), rgb(0, 0, 0)), 
+                radial-gradient(100% 100% at calc(100% - var(--x)) calc(30% - var(--y)), rgb(30, 136, 229), rgb(26, 35, 126)), 
+                linear-gradient(60deg, rgb(13, 71, 161), rgb(21, 101, 192));
+            background-blend-mode: overlay, overlay, difference, difference, difference, normal;
         }
 
         .hero::before {
-            content: '';
-            position: absolute;
-            top: -50%;
-            left: -50%;
-            width: 200%;
-            height: 200%;
-            background: radial-gradient(circle, var(--secondary-blue) 0%, transparent 50%);
-            opacity: 0.03;
-            animation: rotate 30s linear infinite;
-        }
-
-        @keyframes rotate {
-            from { transform: rotate(0deg); }
-            to { transform: rotate(360deg); }
+            display: none;
         }
 
         .btn-primary {
@@ -225,6 +222,33 @@
             transform: rotate(-45deg);
             bottom: 11px;
         }
+
+        /* Button with Icon Styles */
+        .btn-with-icon {
+            display: inline-flex;
+            align-items: center;
+            gap: 1.5rem;
+            padding-right: 2rem;
+        }
+
+        .btn-with-icon img {
+            width: 35px;
+            height: 35px;
+            transition: transform 0.3s ease;
+        }
+
+        .btn-with-icon:hover img {
+            transform: translateX(10px);
+        }
+
+        .btn-primary img {
+            filter: brightness(0) invert(1);
+        }
+
+        /* Only apply white filter to the outline button icon */
+        .btn-outline-light img {
+            filter: brightness(0) invert(1);
+        }
     </style>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
@@ -266,8 +290,14 @@
             <h1 class="display-4 mb-4">Secure & Ephemeral File Sharing</h1>
             <p class="lead mb-5">End-to-end encrypted platform for secure document sharing. Perfect for legal professionals, NGOs, activists, and media organizations. Ideal for sensitive communications and confidential disclosures.</p>
             <div class="d-flex justify-content-center gap-3">
-                <button class="btn btn-primary btn-lg">Create Secure Channel</button>
-                <button class="btn btn-outline-light btn-lg">Share Confidentially</button>
+                <button class="btn btn-primary btn-lg btn-with-icon">
+                    Create Secure Channel
+                    <img src="button.svg" alt="Arrow">
+                </button>
+                <button class="btn btn-outline-light btn-lg btn-with-icon">
+                    Share Confidentially
+                    <img src="button.svg" alt="Arrow">
+                </button>
             </div>
         </div>
     </section>
@@ -457,5 +487,14 @@ Sender:
             </div>
         </div>
     </footer>
+
+    <script>
+        document.querySelector('.hero').addEventListener("pointermove", (e) => {
+            const { currentTarget: el, clientX: x, clientY: y } = e;
+            const { top: t, left: l, width: w, height: h } = el.getBoundingClientRect();
+            el.style.setProperty('--posX', x-l-w/2);
+            el.style.setProperty('--posY', y-t-h/2);
+        });
+    </script>
 </body>
 </html>
