--- a/static/index.html
+++ b/static/index.html
@@ -81,6 +81,45 @@
             background-blend-mode: overlay, overlay, difference, difference, difference, normal;
         }
 
+        @media (max-width: 768px) {
+            .hero {
+                padding: 4rem 0;
+            }
+
+            .hero .display-4 {
+                font-size: 2rem;
+                margin-bottom: 1rem !important;
+            }
+
+            .hero .lead {
+                font-size: 1rem;
+                margin-bottom: 2rem !important;
+            }
+
+            .hero .d-flex {
+                flex-direction: column;
+                gap: 1rem !important;
+            }
+
+            .hero .btn-lg {
+                width: 100%;
+                justify-content: center;
+                padding: 0.8rem 1rem;
+            }
+
+            .btn-with-icon img {
+                width: 28px;
+                height: 28px;
+            }
+        }
+
+        /* Touch device optimization */
+        @media (hover: none) {
+            .hero {
+                background-image: linear-gradient(115deg, rgb(33, 150, 243), rgb(25, 25, 25));
+            }
+        }
+
         .hero::before {
             display: none;
         }
