Add new text content to index.html and update binary .DS_Store files in multiple directories

--- a/static/index.html
+++ b/static/index.html
@@ -338,6 +338,7 @@
                     <img src="button.svg" alt="Arrow">
                 </button>
             </div>
+            <p class="text-white-50 mt-5" style="font-size: 0.9rem; font-weight: 500; letter-spacing: 0.5px;">Encrypted truths, ephemeral secrets. Define the Accountables.</p>
         </div>
     </section>
 
